kubernetes/lofocats-ui.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "Initial deployment"
  labels:
    app: lofocats
    component: ui
  name: lofocats-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lofocats
      component: ui
  template:
    metadata:
      labels:
        app: lofocats
        component: ui
    spec:
      containers:
      - image: maxbrunet/lofocats_ui:latest
        name: lofocats-ui
        ports:
        - containerPort: 3000
        #resources:
        #  limits:
        #    cpu: 500m
        #    memory: 512Mi
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 2  # non-root user
