kubernetes/lofocats-api.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lofocats
    component: api
  name: lofocats-api
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  type: NodePort
  selector:
    app: lofocats
    component: api
