kubernetes/lofocats-ui.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lofocats
    component: ui
  name: lofocats-ui
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  type: NodePort
  selector:
    app: lofocats
    component: ui
